Fixed animate/dark mode buttons logic, menu UI is almost done now
* What left is getting user accounts info, like images and notification
  counter.
* Also add account button is not working now, just a stub.

--- a/src/scss/partials/_button.scss
+++ b/src/scss/partials/_button.scss
@@ -138,7 +138,7 @@ $btn-menu-z-index: 4;
     transform-origin: inherit;
   }
 
-  &,
+  &:not(.inner-backdrop),
   &-items,
   &-reactions-container/* ,
   &-reactions-bubble-big */ {
@@ -1096,13 +1096,15 @@ $btn-menu-z-index: 4;
 // Chrome doesn't understand nested backdrops
 // https://stackoverflow.com/questions/60997948/backdrop-filter-not-working-for-nested-elements-in-chrome
 // This can be fixed with, f.e., ::before
-.inner-backdrop::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  border-radius: inherit;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: var(--menu-backdrop-filter);
-  background-color: var(--menu-background-color);
+.inner-backdrop {
+  background-color: var(--surface-color);
+}
+
+.more-button {
+  transform: scale(1) !important;
+}
+
+.footer-font-setup {
+  color: var(--gc-secondary-text-color);
+  font-weight: 400;
 }
